php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #29183 Undefined symbol zend_check_private in file Zend/zend_object_handlers.lo
Submitted: 2004-07-15 14:02 UTC Modified: 2005-01-19 02:46 UTC
Votes:2
Avg. Score:4.0 ± 1.0
Reproduced:2 of 2 (100.0%)
Same Version:1 (50.0%)
Same OS:1 (50.0%)
From: tomppa at iki dot fi Assigned:
Status: Closed Package: Compile Failure
PHP Version: 5.0.0 OS: Solaris 9/SPARC
Private report: No CVE-ID: None
 [2004-07-15 14:02 UTC] tomppa at iki dot fi
Description:
------------
Can't link PHP 5.0.0 with latest Sun C compiler

Undefined                       first referenced
 symbol                             in file
zend_check_private                Zend/zend_object_handlers.lo
ld: fatal: Symbol referencing errors. No output written to sapi/cli/php



Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2004-07-15 14:07 UTC] tomppa at iki dot fi
If I remove inline from Zend/zend_object_handlers.c line 598 compiling succeeded

inline  zend_function *zend_check_private(zend_function *fbc, zend_class_entry *ce, int fn_flags, char function_name_strval, int function_name_strlen TSRMLS_DC)
 [2004-12-21 07:46 UTC] sniper@php.net
Please try using this CVS snapshot:

  http://snaps.php.net/php5-STABLE-latest.tar.gz
 
For Windows:
 
  http://snaps.php.net/win32/php5.0-win32-latest.zip


 [2004-12-29 01:00 UTC] php-bugs at lists dot php dot net
No feedback was provided for this bug for over a week, so it is
being suspended automatically. If you are able to provide the
information that was originally requested, please do so and change
the status of the bug back to "Open".
 [2004-12-29 13:07 UTC] tomppa at iki dot fi
Trying to compile latest php5-STABLE-200412290730 but it's still failing same way

Undefined                       first referenced
 symbol                             in file
zend_check_private                  Zend/zend_object_handlers.lo
ld: fatal: Symbol referencing errors. No output written to sapi/cli/php
*** Error code 1
make: Fatal error: Command failed for target `sapi/cli/php'
 [2005-01-07 15:46 UTC] j dot henge-ernst at interexa dot de
The same problem occurs on Solaris 10/AMD64. I guess it something to do with the Sun C Compiler
cc: Sun C 5.7 Build23_1 2004/12/13

Tried with current CVS php5-STABLE-200501071330
 [2005-01-14 04:16 UTC] antonino at rager dot com dot au
Compiling with snapshot php5-STABLE-200501140130
to successfully avoid bug #31121 of zend_strtod.c.

Using solaris 8 and Sun Studio compiler 9 (aka Forte, Sun workshop, etc).
cc: Sun C 5.6 2004/07/15

As tomppa stated, removing 'inline' from zend_object_handlers.c allows the compile to complete.
 [2005-01-19 02:46 UTC] sniper@php.net
This bug has been fixed in CVS.

Snapshots of the sources are packaged every three hours; this change
will be in the next snapshot. You can grab the snapshot at
http://snaps.php.net/.
 
Thank you for the report, and for helping us make PHP better.


 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Fri Sep 18 03:00:01 2026 UTC