- Fixed bug #29183 (Undefined symbol zend_check_private with Solaris CC)

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@177626 c90b9560-bf6c-de11-be94-00142212c4b1